Prevent nav jumping

--- a/_sass/electron.scss
+++ b/_sass/electron.scss
@@ -40,3 +40,7 @@ $site-header-bg:        hsl(230, 16%, 24%);
     stroke-linecap: round;
   }
 }
+
+.site-header-nav .mega-octicon {
+  min-width: 32px; // stops jumping of the nav when loading the page
+}
